Refactor: login implementation